# processpype

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
docs/api/: application.md  communications.md  configuration.md  models.md  router.md  secrets.md  service-manager.md  service.md
docs/development/: contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: application.md  communications.md  configuration.md  docker.md  routing.md  secrets.md  services.md
docs/services/: agent.md  clock.md  database.md  monitoring.md  notification.md  storage.md
examples/: basic.py
processpype/: __init__.py  app_manager.py  application.py  creator.py  main.py
processpype/communications/: __init__.py  base.py  dispatcher.py  models.py  setup.py
processpype/communications/backends/: __init__.py  email.py  telegram.py
processpype/config/: __init__.py  manager.py  models.py  providers.py
processpype/core/: README.md  __init__.py  application.py  logfire.py  models.py  router.py  service.py  system.py
processpype/core/config/: manager.py
processpype/core/configuration/: manager.py  models.py
processpype/core/service/: manager.py  router.py
processpype/environment/: __init__.py  system.py
processpype/examples/: __init__.py  counter.py  hello.py  ticker.py
processpype/notifications/: __init__.py  base.py  dispatcher.py  email.py  models.py
processpype/notifications/telegram/: __init__.py  bot.py  login.py
processpype/observability/: __init__.py  setup.py
processpype/observability/logging/: __init__.py  config.py  context.py  filters.py  formatters.py  levels.py  setup.py
processpype/observability/tracing/: __init__.py  config.py  decorators.py  noop.py  setup.py
processpype/secrets/: __init__.py  exceptions.py  manager.py  providers.py
processpype/server/: __init__.py  app_router.py  service_router.py
processpype/service/: __init__.py  base.py  manager.py  models.py  naming.py  registry.py
processpype/services/: __init__.py
processpype/services/agent/: manager.py
processpype/services/clock/: manager.py
processpype/services/database/: manager.py  models.py  service.py
processpype/services/database/engines/: postgres.py  sqlite.py
processpype/services/monitoring/: __init__.py  manager.py  service.py
processpype/services/monitoring/cloudwatch/: manager.py  router.py
processpype/services/notification/: models.py  service.py
processpype/services/storage/: __init__.py  models.py
processpype/services/storage/backends/: __init__.py  local.py  s3.py
scripts/: release.sh
tests/: conftest.py  test_main.py
tests/communications/: test_backends_factory.py  test_base.py  test_dispatcher.py  test_email_backend.py  test_models.py  test_setup.py  test_telegram_backend.py
tests/core/: test_api_prefix.py  test_application.py  test_config.py  test_config_manager.py  test_config_providers.py  test_creator.py  test_logfire.py  test_manager.py  test_models.py  test_registry.py  test_router.py  test_service.py  test_services_compat.py  test_system.py
tests/core/service/: test_manager.py  test_router.py  test_service.py
tests/examples/: test_counter.py  test_hello.py  test_ticker.py
tests/observability/: test_init.py  test_logging_config.py  test_logging_context.py  test_logging_filters.py  test_logging_formatters.py  test_logging_setup.py  test_tracing_decorators.py  test_tracing_noop.py  test_tracing_setup.py
tests/secrets/: test_config.py  test_manager.py  test_providers.py
tests/services/agent/: test_configuration.py  test_manager.py  test_router.py  test_service.py
tests/services/clock/: __init__.py  test_config.py  test_manager.py  test_router.py  test_service.py
tests/services/cronitor/: __init__.py  test_cronitor_config.py  test_cronitor_manager.py  test_cronitor_router.py  test_cronitor_service.py
tests/services/database/: test_manager.py  test_models.py  test_service.py
tests/services/database/engines/: __init__.py  test_postgres.py  test_sqlite.py
tests/services/monitoring/: __init__.py  test_monitoring_config.py  test_monitoring_manager.py  test_monitoring_router.py  test_monitoring_service.py
tests/services/monitoring/system/: __init__.py  test_system_monitoring_config.py  test_system_monitoring_manager.py  test_system_monitoring_router.py  test_system_monitoring_service.py
tests/services/notification/: __init__.py  test_console_channel.py  test_email_channel.py  test_notification_config.py  test_notification_model.py  test_notification_service.py  test_notification_service_manager.py  test_notification_templates.py
tests/services/storage/: test_local_backend.py  test_s3_backend.py  test_storage_service.py
