[project]
name = "processpype"
version = "1.2.1"
description = "A modular application framework with built-in FastAPI integration and pluggable services"
authors = [{ name = "Gianluca Pagliara", email = "pagliara.gianluca@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.4",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "psutil>=6.1.1",
    "httpx>=0.28.1",
    "pytz>=2024.2",
    "logfire[fastapi]>=4.16",
    "pyyaml>=6.0.2",
    "eventspype>=1.1.0",
]

[project.optional-dependencies]
clock = ["chronopype>=0.7.3"]
agents = ["agentspype>=0.2.0"]
storage = ["boto3>=1.37.0"]
database = ["sqlalchemy>=2.0.30", "aiosqlite>=0.20.0", "asyncpg>=0.29.0"]
database_py313 = ["sqlalchemy>=2.0.30", "aiosqlite>=0.20.0"]
notifications = ["telethon>=1.34.0", "aiosmtplib>=3.0.1"]
monitoring = ["cronitor==4.7.1", "boto3>=1.37.0"]
all = ["chronopype>=0.7.3", "agentspype>=0.2.0", "boto3>=1.37.0", "sqlalchemy>=2.0.30", "aiosqlite>=0.20.0", "asyncpg>=0.29.0", "telethon>=1.34.0", "aiosmtplib>=3.0.1", "cronitor==4.7.1"]
all_py313 = ["chronopype>=0.7.3", "agentspype>=0.2.0", "boto3>=1.37.0", "sqlalchemy>=2.0.30", "aiosqlite>=0.20.0", "telethon>=1.34.0", "aiosmtplib>=3.0.1", "cronitor==4.7.1"]

[project.urls]
Repository = "https://github.com/gianlucapagliara/processpype"
Documentation = "https://gianlucapagliara.github.io/processpype/"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "mypy>=1.7.0",
    "ruff>=0.8.4",
    "pre-commit>=4.0",
    "types-pyyaml>=6.0.12.20241230",
    "types-pytz>=2024.2.0.20241221",
]
docs = [
    "mkdocs>=1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict = true
disallow_untyped_decorators = false
ignore_missing_imports = true
disable_error_code = ["misc"]
exclude = ["tests/.*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
